--- a/src/assets/styles/cmps/_label-picker.scss
+++ b/src/assets/styles/cmps/_label-picker.scss
@@ -41,9 +41,9 @@
                 width: em(152px);
                 transition: transform .1s ease-in-out, opacity .1s ease-in-out;
 
-                &:hover {
-                    
-                }
+                // &:hover {
+
+                // }
             }
         }
     }
