--- a/src/assets/styles/cmps/_board-list.scss
+++ b/src/assets/styles/cmps/_board-list.scss
@@ -17,7 +17,7 @@
 
 
     .board-side-preview:hover {
-        background-color: #eceff8;
+        background-color: rgba(103, 104, 121, 10%);
         border-radius: 4px;
         width: 14.2em;
         cursor: pointer;
