--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -8,15 +8,15 @@
     align-items: center;
     text-align: center;
     border-left: 0.4em solid $clr-label-3;
-    
+
     &:hover {
         background-color: rgba(245, 246, 248, 0.97);
     }
-    
+
     &.drag {
         background-color: $bgc-main;
         rotate: 1deg;
-        opacity:60%;
+        opacity: 60%;
     }
 
     .dyn-cell {
@@ -26,7 +26,7 @@
         align-items: center;
         // border-left: 1px solid $clr-border;
         border-right: 1px solid $clr-border;
-        width: 100px;
+        // width: 100px;
     }
 
     .members {
@@ -59,21 +59,47 @@
     }
 
     .timeline-container {
-        width: 100%; 
-        background-color: gray;
-        height: 20px;
+        background-color: rgb(48, 48, 48);
+        height: em(22px);
+        color: white;
         border-radius: 1em;
         position: relative;
+        text-align: center;
+        width: 80%;
+        // padding-left: 10px;
+        
+        .progress-bar-container {
+        
+            display: flex;
+            align-items: center;
+            position: relative;
+            height: 22px;
+            border-radius: 22em !important;
+            overflow: hidden;
+        }
+        
+        .progress-bar {
+            background-color: #00c875; 
+            height: 100%;
+            // border-radius: inherit;
+            transition: width 0.4s ease;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+        
+        .progress-bar-container span {
+            z-index: 1; 
+            position: absolute;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+        }
     }
+    
+    
+    
 
-    .timline-inside {
-        background-color: yellowgreen;
-        height: 20px;
-        display: flex;
-        position: absolute;
-    }
-
-    .timline-inside {
-        justify-content: space-between;
-    }
 }
