--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -2,6 +2,7 @@
     display: grid;
     grid-auto-flow: column;
     grid-template-columns: 36px 350px 150px 150px 100px 200px repeat(auto-fill, 100px);
+    // grid-template-columns: subgrid;
     border: 1px solid $clr-border;
     border-top: none;
     height: 2.25em;
@@ -17,6 +18,7 @@
         // border-left: 1px solid $clr-border;
         border-right: 1px solid $clr-border;
         width: 100px;
+        // grid-template-columns: subgrid;
     }
 
     .members {
