Search input width cosmetic

--- a/src/assets/styles/cmps/_Board-sidebar.scss
+++ b/src/assets/styles/cmps/_Board-sidebar.scss
@@ -6,6 +6,10 @@
     border-radius: 0 0.5em 0 0;
     transition: 0.2s;
 
+    .textField_9430c37135 .inputWrapper_129bb61475 .input_fb77b8179c.inputHasIcon_c8735863b0{
+        width: 14em;
+    }
+
     .actions-sidebar-upper {
         line-height: 1.5;
         font-size: 14px;
