Adding colors to the groups

--- a/src/assets/styles/cmps/_Board-sidebar.scss
+++ b/src/assets/styles/cmps/_Board-sidebar.scss
@@ -10,6 +10,12 @@
         width: 14em;
     }
 
+    .textField_9430c37135 .inputWrapper_129bb61475 .iconContainer_8576251e2c {
+        right: 160px;
+        width: 24px;
+        height: 20px;
+    }
+
     .actions-sidebar-upper {
         line-height: 1.5;
         font-size: 14px;
