--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -2,18 +2,25 @@
     box-sizing: border-box;
 }
 
-// ::selection {
-//     background-color: $clr1;
-//     color: $clr6;
-// }
+#root {
+    // display: grid;
+    // grid-template-columns: auto 1fr;
+    // grid-template-rows: auto 1fr; 
+    height: 100vh;
+    width: 100vw;
+    // overflow: hidden;
+    // gap: 10px;
+}
 
 html {
     color: $clr-main;
     scroll-behavior: smooth;
 }
-body, html {
+
+body,
+html {
     overflow: hidden;
-    height: 100%; /* Ensures that the body takes up the full viewport height */
+    height: 100%;
 }
 
 article,
@@ -65,7 +72,7 @@ h1 {
     line-height: lh(42px);
 }
 
-h2 >* {
+h2>* {
     font-size: em(32px);
     line-height: lh(32px);
 }
@@ -106,13 +113,14 @@ main {
     grid-auto-flow: column;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     width: 10px;
 
     // background-color: black;
 
 }
-::-webkit-scrollbar-thumb{
+
+::-webkit-scrollbar-thumb {
     background-color: $sb-clr;
 }
 
@@ -166,6 +174,6 @@ li {
     display: none;
 }
 
-.active{
-    color:#323338;
+.active {
+    color: #323338;
 }
