--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -1,10 +1,11 @@
 .group-list {
     display: grid;
     row-gap: 2em;
-
-    >* {
-        background-color: $bgc-main;
-    }
+    position: relative;
+    width: max-content;
+    // >* {
+    //     background-color: $bgc-main;
+    // }
 
     .header-items {
         display: grid;
@@ -19,7 +20,7 @@
         // border-top-left-radius: 0.3em
     }
 
-    & > *{
+    &>* {
         grid-template-columns: subgrid;
     }
 
@@ -61,7 +62,7 @@
         opacity: 1;
     }
 
-    .wrapper_3963731b0e{
+    .wrapper_3963731b0e {
         justify-self: center;
         position: relative;
         display: grid;
@@ -69,9 +70,14 @@
         width: fit-content;
         height: min-content;
     }
+
     .dyn-cell.checkbox-header-container {
         display: grid;
         justify-items: center;
     }
 
+    .group-container {
+       background-color: $bgc-main;
+
+    }
 }
