--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -1,24 +1,15 @@
 
 .board-preview {
-    display: grid;
-    grid-row: 2;
-    grid-column: 2;
     position: relative;
-    width: 100%;
     box-sizing: content-box;
     padding-bottom: em(40px);
     padding-left: em(40px);
+    overflow: auto;
 
     & ul{
         list-style: none;
     }
 
-    .board-items {
-        height: 100%;
-        width: 100%;
-        outline: none;
-        position: relative;
-    }
     .title-container{
         display: grid;
         grid-auto-flow: column;
