--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -1,6 +1,9 @@
 .group-list {
     display: grid;
     row-gap: 2em;
+    width: max-content;
+    // overflow: auto;
+    position: relative;
 
     >* {
         background-color: $bgc-main;
