Fix header pos, refactor editable text, add update group name

--- a/src/assets/styles/basics/_btns.scss
+++ b/src/assets/styles/basics/_btns.scss
@@ -11,3 +11,10 @@
     justify-self: center;
     color: $clr-icon;
 }
+
+button{
+    span{
+        font-size: 1em;
+        color: $clr-main;
+    }
+}
