--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -31,4 +31,8 @@ header {
         align-self: center;
         align-items: center;
     }
+    
+    .badgeWrapper_a9fd67ec0d .badge_cf82e50bb0:not(.outside_8db7f262b3){
+        z-index: 0;
+    }
 }
