--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -3,8 +3,9 @@
     position: relative;
     box-sizing: content-box;
     padding-bottom: em(40px);
-    padding-left: em(40px);
+    // overflow: scroll;
     overflow: auto;
+    // height: 100%;
 
     & ul{
         list-style: none;
