--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -1,10 +1,13 @@
 .list-item {
+
     display: grid;
+    grid-template-columns: subgrid;
+    grid-column: 1 / -1;
     grid-auto-flow: column;
-    grid-template-columns: 36px 350px 150px 150px 100px 200px repeat(auto-fill, 100px);
-  
-    border: 1px solid $clr-border;
-    border-top: none;
+
+    // border: 1px solid $clr-border;
+    border-left: none;
+    border-right: none;
     height: 2.25em;
     align-items: center;
     text-align: center;
@@ -13,6 +16,11 @@
 
     &:hover {
         background-color: rgba(245, 246, 248, 0.97);
+    }
+
+    & .blank-cell-add-task {
+        position: sticky;
+        left: 0;
     }
 
     &.drag {
@@ -32,7 +40,7 @@
         border-right: 1px solid $clr-border;
         // width: 100px;
 
-        &:not(:first-child){
+        &:not(:first-child) {
             justify-items: center;
         }
     }
@@ -52,13 +60,17 @@
     }
 
     &.add-task {
+        // position: sticky;
+        display: grid;
         border-bottom-left-radius: 0.3em;
         background-color: white;
+        grid-column: 1/-1;
+        // left: 40px;
     }
 
     &.add-task div {
-        grid-column: 2;
-        padding-left: 0.9em;
+        // grid-column: 2;
+        // padding-left: 0.9em;
     }
 
     .dyn-cell.checkbox-container {
@@ -108,24 +120,54 @@
         }
     }
 
+    .task-actions {
+        display: grid;
+        position: sticky;
+        left: 0;
+    }
+
     &:hover .task-actions button {
         opacity: 1;
         transition: 0.3s;
     }
 
     .task-actions button {
-        opacity: 0;
-        position: absolute;
-        right: 0.9em;
-        top: -1em;
+        // opacity: 0;
+        // position: absolute;
+        // right: 0.9em;
+        // top: -1em;
     }
 
     .dyn-cell.txt {
         display: grid;
         justify-items: center;
     }
+
     .dyn-cell.timeline {
         // display: grid;
         justify-items: center;
     }
+
+    .task-title-cell {
+        display: grid;
+        grid-auto-flow: column;
+        // width: 377px;
+    }
+
+    & .add-task-sticky-container {
+        height: 100%;
+        width: 100%;
+        display: grid;
+        grid-auto-flow: column;
+        grid-template-columns: 36px;
+        position: sticky;
+        left: 40px;
+    }
+
+    & .add-task-content-container {
+        display: grid;
+        align-items: center;
+        width: 80%;
+    }
+
 }
