--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -27,6 +27,24 @@
         align-items: center;
         text-align: center;
         border-right: 1px solid $clr-border;
+
+        & .blank-cell {
+            position: sticky;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #fff;
+        }
+
+        & .dyn-cell {
+            border: 1px solid $clr-border;
+            border-left: none;
+            height: 100%;
+            display: grid;
+            align-self: center;
+            align-items: center;
+        }
+
     }
 
     & .group-container {
@@ -45,12 +63,13 @@
             grid-auto-flow: column;
             background-color: #ffffff;
             // z-index: 1111;
-            // border: 1px solid #d0d4e4;
+            border: 1px solid #d0d4e4;
+            border-bottom: none;
             // border-top: none;
             left: 40px;
             grid-template-columns: 36px 1fr;
-
         }
+
 
         .task-preview-title-container {
             display: grid;
@@ -59,9 +78,9 @@
             position: sticky;
             left: 40px;
             height: 100%;
-            // z-index: 1111;
+            grid-template-columns: 36px 1fr;
+            z-index: 11;
             // grid-template-columns: 304px 65px;
-
         }
     }
 
@@ -69,14 +88,6 @@
     //     grid-column: 1/-1;
     //     grid-template-columns: subgrid;
     // }
-
-    .header-items .dyn-cell {
-        border-right: 1px solid $clr-border;
-        height: 2.25em;
-        display: grid;
-        align-self: center;
-        align-items: center;
-    }
 
     .group-title {
         font-family: poppins;
@@ -128,6 +139,11 @@
     .checkbox-header-container {
         display: grid;
         justify-items: center;
+        align-items: center;
+        border: 1px solid #d0d4e4;
+        height: 100%;
+        border-top: none;
+        border-bottom: none;
     }
 
     .task-title-cell {
@@ -135,5 +151,4 @@
         grid-auto-flow: column;
         grid-template-columns: 312px 65px;
     }
-
 }
