Add editable cmp new to add item

--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -191,6 +191,10 @@
         border-right: none;
     }
 
+    & .add-task-checkbox {
+        opacity: .4;
+    }
+
     & .btn-message-container {
         display: grid;
         justify-content: center;
