--- a/src/assets/styles/cmps/_Board-sidebar.scss
+++ b/src/assets/styles/cmps/_Board-sidebar.scss
@@ -11,6 +11,10 @@
         width: 14em;
     }
 
+    & .textField_5c7ed8f268 .inputWrapper_f7d37dd0a6 .input_45f5cffc4e.inputHasIcon_b527778477{
+        width:14em;
+    }
+
     .textField_9430c37135 .inputWrapper_129bb61475 .iconContainer_8576251e2c {
         right: 160px;
         width: 24px;
